--- a/wpfTest/App.xaml
+++ b/wpfTest/App.xaml
@@ -6,6 +6,7 @@
     <Application.Resources>
         <BitmapImage x:Key="vanilaMap" UriSource="vanilaMap.png"/>
         <BitmapImage x:Key="hugeMap" UriSource="hugeMap.png"/>
+        <BitmapImage x:Key="frameMap" UriSource="frameMap.png"/>
         <BitmapImage x:Key="grass" UriSource="Water.png"/>
         <BitmapImage x:Key="water" UriSource="Water.png"/>
     </Application.Resources>
