--- a/wpfTest/MainWindow.xaml
+++ b/wpfTest/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Grid>
             <sharpGL:OpenGLControl Name="openGLControl1" OpenGLDraw="OpenGLControl_OpenGLDraw" RenderContextType="FBO" />
         </Grid>
-        <Grid Name="mapPanel">
+        <!--<Grid Name="mapPanel">
             <Canvas Name="tiles">
                 <Image Name="mapImage">
                     <Image.LayoutTransform>
@@ -21,6 +21,6 @@
                     </Image.LayoutTransform>
                 </Image>
             </Canvas>
-        </Grid>
+        </Grid>-->
     </Grid>
 </Window>
