Refactored players input, added frame for selecting units and added command groups.

--- a/wpfTest/MainWindow.xaml
+++ b/wpfTest/MainWindow.xaml
@@ -11,7 +11,9 @@
         >
     <Grid>
         <Grid>
-            <sharpGL:OpenGLControl Name="openGLControl1" OpenGLDraw="OpenGLControl_OpenGLDraw" RenderContextType="FBO" />
+            <sharpGL:OpenGLControl Name="openGLControl1" OpenGLDraw="OpenGLControl_OpenGLDraw" RenderContextType="FBO"
+                                   MouseLeftButtonDown="openGLControl1_MouseLeftButtonDown" MouseLeftButtonUp="openGLControl1_MouseLeftButtonUp"
+                                   MouseMove="openGLControl1_MouseMove"/>
         </Grid>
         <!--<Grid Name="mapPanel">
             <Canvas Name="tiles">
