--- a/wpfTest/MainWindow.xaml
+++ b/wpfTest/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Grid>
             <sharpGL:OpenGLControl Name="openGLControl1" OpenGLDraw="OpenGLControl_OpenGLDraw" RenderContextType="FBO"
                                    MouseLeftButtonDown="openGLControl1_MouseLeftButtonDown" MouseLeftButtonUp="openGLControl1_MouseLeftButtonUp"
-                                   MouseMove="openGLControl1_MouseMove"/>
+                                   MouseMove="openGLControl1_MouseMove" MouseRightButtonDown="openGLControl1_MouseRightButtonDown"/>
         </Grid>
         <!--<Grid Name="mapPanel">
             <Canvas Name="tiles">
