--- a/wpfTest/App.xaml
+++ b/wpfTest/App.xaml
@@ -2,12 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:wpfTest"
-             StartupUri="MainWindow.xaml">
+             StartupUri="GUI/MainWindow.xaml">
     <Application.Resources>
-        <BitmapImage x:Key="vanilaMap" UriSource="vanilaMap.png"/>
-        <BitmapImage x:Key="hugeMap" UriSource="hugeMap.png"/>
-        <BitmapImage x:Key="frameMap" UriSource="frameMap.png"/>
-        <BitmapImage x:Key="grass" UriSource="Water.png"/>
-        <BitmapImage x:Key="water" UriSource="Water.png"/>
+        <BitmapImage x:Key="vanilaMap" UriSource="Images/vanilaMap.png"/>
+        <BitmapImage x:Key="hugeMap" UriSource="Images/hugeMap.png"/>
+        <BitmapImage x:Key="frameMap" UriSource="Images/frameMap.png"/>
     </Application.Resources>
 </Application>
