Added heuristics for stopping in movement commands, modified collisions between units of the same player, improved pathfinding by reducing number of iterations required.

--- a/wpfTest/App.xaml
+++ b/wpfTest/App.xaml
@@ -8,5 +8,6 @@
         <BitmapImage x:Key="hugeMap" UriSource="Images/hugeMap.png"/>
         <BitmapImage x:Key="frameMap" UriSource="Images/frameMap.png"/>
         <BitmapImage x:Key="riverMap" UriSource="Images/riverMap.png"/>
+        <BitmapImage x:Key="riverBuildingsMap" UriSource="Images/riverBuildingsMap.png"/>
     </Application.Resources>
 </Application>
