--- a/wpfTest/GUI/MainWindow.xaml
+++ b/wpfTest/GUI/MainWindow.xaml
@@ -15,148 +15,8 @@
                                    MouseLeftButtonDown="openGLControl1_MouseLeftButtonDown" MouseLeftButtonUp="openGLControl1_MouseLeftButtonUp"
                                    MouseMove="openGLControl1_MouseMove" MouseRightButtonDown="openGLControl1_MouseRightButtonDown"/>
             <!--<DataGridCellsPanel Width="50" Height="50">-->
-            
+
             <Canvas Name="gui">
-                <Grid Name="unitInfoPanel" Width="200" Height="200" Background="Gray">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Grid.Resources>
-                        <Style TargetType="Label">
-                            <Setter Property="Background" Value="Transparent" />
-                            <Setter Property="Foreground" Value="Yellow" />
-                            <Setter Property="FontSize" Value="10" />
-                            <Setter Property="Padding" Value="0" />
-                            <Setter Property="VerticalContentAlignment" Value="Center" />
-                        </Style>
-                    </Grid.Resources>
-                    <Label Grid.Row="0" Grid.Column="0">Name:</Label>
-                    <Label Name="nameL" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="1" Grid.Column="0">Health:</Label>
-                    <Label Name="healthL" Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="2" Grid.Column="0">Energy:</Label>
-                    <Label Name="energyL" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="3" Grid.Column="0">Size:</Label>
-                    <Label Name="sizeL" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="4" Grid.Column="0">View range:</Label>
-                    <Label Name="viewRangeL" Grid.Row="4" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="5" Grid.Column="0">Max speed:</Label>
-                    <Label Name="maxSpeedL" Grid.Row="5" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="6" Grid.Column="0">Attack damage:</Label>
-                    <Label Name="atDamageL" Grid.Row="6" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="7" Grid.Column="0">Attack period:</Label>
-                    <Label Name="atPeriodL" Grid.Row="7" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Label Grid.Row="8" Grid.Column="0">Attack distance:</Label>
-                    <Label Name="atDistanceL" Grid.Row="8" Grid.Column="1" HorizontalContentAlignment="Center">50/75</Label>
-                    <Grid Name="commandsPanel" Grid.Row="9" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
-                        <Grid.Resources>
-                            <Style TargetType="Label">
-                                <Setter Property="Background" Value="White" />
-                                <Setter Property="BorderThickness" Value="1"/>
-                                <Setter Property="BorderBrush" Value="Black" />
-                                <Setter Property="HorizontalContentAlignment" Value="Center" />
-                            </Style>
-                        </Grid.Resources>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                    </Grid>
-                </Grid>
-                <Grid Name="unitPanel" Width="300" Height="188" Background="Black">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                </Grid>
-                <Grid Name="abilityPanel" Width="200" Height="200" Background="Gray">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                </Grid>
-                <Grid Name="abilityInfoPanel" Width="100" Height="200" Background="Black">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Grid.Resources>
-                        <Style TargetType="Label">
-                            <Setter Property="Background" Value="Transparent" />
-                            <Setter Property="Foreground" Value="Yellow" />
-                            <Setter Property="FontSize" Value="10" />
-                            <Setter Property="Padding" Value="0" />
-                            <Setter Property="VerticalContentAlignment" Value="Center" />
-                        </Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="Background" Value="LightBlue" />
-                            <Setter Property="Foreground" Value="Black" />
-                            <Setter Property="FontSize" Value="9" />
-                            <Setter Property="Padding" Value="0" />
-                            <Setter Property="TextAlignment" Value="Center"/>
-                        </Style>
-                    </Grid.Resources>
-                    <Label Name="abilityNameL" FontSize="13" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalContentAlignment="Center">Name:</Label>
-                    <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">Energy cost:</Label>
-                    <Label Name="abilityEnergyCostL" Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Right">50/75</Label>
-                    <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">Resource cost:</Label>
-                    <Label Name="abilityResourceCostL" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment="Right">50/75</Label>
-                    <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">Target type:</Label>
-                    <Label Name="abilityTargetL" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Right">50/75</Label>
-                    <TextBlock Name="abilityDescriptionTB" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="4" TextWrapping="Wrap" />
-                </Grid>
                 <Grid Name="resourcesL" Width="100" Height="20" Background="Black">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
@@ -171,10 +31,11 @@
                             <Setter Property="Foreground" Value="Yellow" />
                             <Setter Property="FontSize" Value="10" />
                             <Setter Property="Padding" Value="0" />
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
                         </Style>
                     </Grid.Resources>
-                    <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">Resource:</Label>
-                    <Label Name="resourceL" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalContentAlignment="Center">500</Label>
+                    <Label Grid.Row="0" Grid.Column="0">Air:</Label>
+                    <Label Name="airTakenL" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Center">500</Label>
                 </Grid>
             </Canvas>
         </Grid>
