--- a/wpfTest/App.xaml
+++ b/wpfTest/App.xaml
@@ -102,5 +102,39 @@
                 </Style>
             </Style.Resources>
         </Style>
+        <Style x:Key="GameMenuStyle" TargetType="Grid">
+            <Setter Property="Background" Value="DarkGray" />
+            <Style.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Background" Value="Beige" />
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="FontSize" Value="15" />
+                    <Setter Property="Margin" Value="2" />
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                    <Setter Property="FontWeight" Value="Bold" />
+                    <Setter Property="Focusable" Value="False" />
+                </Style>
+            </Style.Resources>
+        </Style>
+        <Style x:Key="GameOptionsStyle" TargetType="Grid">
+            <Setter Property="Background" Value="DarkGray" />
+            <Style.Resources>
+                <Style TargetType="CheckBox">
+                    <Setter Property="Background" Value="Orange" />
+                    <Setter Property="Foreground" Value="Yellow" />
+                    <Setter Property="Padding" Value="0" />
+                    <Setter Property="Focusable" Value="False" />
+                    <Setter Property="VerticalContentAlignment" Value="Center" />
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+            </Style.Resources>
+        </Style>
+        <Style x:Key="AirIndicatorStyle" TargetType="Label">
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Foreground" Value="Yellow" />
+            <Setter Property="FontSize" Value="10" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+        </Style>
     </Application.Resources>
 </Application>
