--- a/wpfTest/App.xaml
+++ b/wpfTest/App.xaml
@@ -19,7 +19,7 @@
                 <Style TargetType="TextBlock">
                     <Setter Property="Background" Value="Transparent" />
                     <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="FontSize" Value="10" />
+                    <Setter Property="FontSize" Value="8" />
                     <Setter Property="Padding" Value="0" />
                     <Setter Property="FontWeight" Value="Bold" />
                 </Style>
@@ -34,7 +34,7 @@
                 <Style TargetType="TextBlock">
                     <Setter Property="Background" Value="Transparent" />
                     <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="FontSize" Value="10" />
+                    <Setter Property="FontSize" Value="7" />
                     <Setter Property="Padding" Value="0" />
                     <Setter Property="FontWeight" Value="Bold" />
                 </Style>
@@ -49,7 +49,7 @@
                 <Style TargetType="TextBlock">
                     <Setter Property="Background" Value="Transparent" />
                     <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="FontSize" Value="10" />
+                    <Setter Property="FontSize" Value="8" />
                     <Setter Property="Padding" Value="0" />
                     <Setter Property="FontWeight" Value="Bold" />
                 </Style>
@@ -61,10 +61,11 @@
                 <Style TargetType="Label">
                     <Setter Property="Background" Value="LightGray" />
                     <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="FontSize" Value="15" />
+                    <Setter Property="FontSize" Value="11" />
                     <Setter Property="Padding" Value="0" />
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
                     <Setter Property="VerticalContentAlignment" Value="Center" />
+                    <Setter Property="FontWeight" Value="Bold" />
                 </Style>
                 <Style TargetType="TextBlock">
                     <Setter Property="Background" Value="Transparent" />
@@ -84,7 +85,7 @@
                 <Style TargetType="TextBlock">
                     <Setter Property="Background" Value="Transparent" />
                     <Setter Property="Foreground" Value="Black" />
-                    <Setter Property="FontSize" Value="10" />
+                    <Setter Property="FontSize" Value="8" />
                     <Setter Property="Padding" Value="0" />
                     <Setter Property="FontWeight" Value="Bold" />
                 </Style>
